# mtg-elt

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  justfile  main.py  pyproject.toml  scryfall.db  sql_database_pipeline.py
.github/workflows/: ci.yml
load/: edhrec.py  scryfall.py
tests/: test_edhrec.py  test_scryfall.py
transform/: .user.yml  dbt_project.yml  profiles.yml
transform/analyses/: explore_edhrec_schema.sql
transform/models/marts/: card_recommendations.sql  commander_recommendations.sql
transform/models/staging/: _sources.yml  stg_commander_high_synergy_cards.sql  stg_commander_new_cards.sql  stg_commander_top_artifacts.sql  stg_commander_top_cards.sql  stg_commander_top_creatures.sql  stg_commander_top_enchantments.sql  stg_commander_top_instants.sql  stg_commander_top_lands.sql  stg_commander_top_mana_artifacts.sql  stg_commander_top_planeswalkers.sql  stg_commander_top_sorceries.sql  stg_commander_top_utility_lands.sql  stg_commanders.sql  stg_oracle_cards.sql
